--- a/TravelMore.Persistance/TravelMore.Persistance.csproj
+++ b/TravelMore.Persistance/TravelMore.Persistance.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TravelMore.Domain\TravelMore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
