Add database configurations

--- a/TravelMore.Api/appsettings.json
+++ b/TravelMore.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TravelMoreContext": "Server=(localdb)\\MSSQLLocalDB;Database=TravelMoreDb;Encrypt=False;TrustServerCertificate=True;"
+  }
 }
