Add exception handling middleware

--- a/TravelMore.Infrastructure/TravelMore.Infrastructure.csproj
+++ b/TravelMore.Infrastructure/TravelMore.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TravelMore.Application\TravelMore.Application.csproj" />
     <ProjectReference Include="..\TravelMore.Persistance\TravelMore.Persistance.csproj" />
   </ItemGroup>
