--- a/TravelMore.Infrastructure/TravelMore.Infrastructure.csproj
+++ b/TravelMore.Infrastructure/TravelMore.Infrastructure.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Jokersoft.AspNetCore.Http.Abstractions" Version="7.0.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
