--- a/TravelMore.Infrastructure/TravelMore.Infrastructure.csproj
+++ b/TravelMore.Infrastructure/TravelMore.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jokersoft.AspNetCore.Http.Abstractions" Version="7.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
