Add jwt token generator

--- a/TravelMore.Api/appsettings.json
+++ b/TravelMore.Api/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Audience": "TravelMore.com",
+    "Issuer": "TravelMore.com",
+    "SecretKey": "very-secret-key-you-will-never-guess-ha-ha-ha",
+    "ExpirationMinutes": 500
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TravelMoreContext": "Server=(localdb)\\MSSQLLocalDB;Database=TravelMoreDb;Encrypt=False;TrustServerCertificate=True;"
