--- a/TravelMore.Application/TravelMore.Application.csproj
+++ b/TravelMore.Application/TravelMore.Application.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Common\Interfaces\" />
+    <Folder Include="Guests\PremiumGuests\" />
   </ItemGroup>
 
 </Project>
