--- a/TravelMore.Domain/TravelMore.Domain.csproj
+++ b/TravelMore.Domain/TravelMore.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Bookings\NewFolder\" />
     <Folder Include="Common\Intefaces\" />
   </ItemGroup>
 
