Add payment method data

--- a/TravelMore.Application/TravelMore.Application.csproj
+++ b/TravelMore.Application/TravelMore.Application.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Common\Dtos\" />
     <Folder Include="Common\Interfaces\" />
     <Folder Include="Discounts\" />
   </ItemGroup>
